# DYOD_WS1718_Sprint1

./: CMakeLists.txt
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  all_type_variant.hpp  resolve_type.hpp  types.hpp
src/lib/operators/: abstract_operator.cpp  get_table.cpp  get_table.hpp  print.cpp  table_scan.cpp  table_scan.hpp  table_scan_impl.cpp  table_scan_impl.hpp
src/lib/storage/: base_attribute_vector.hpp  base_column.hpp  chunk.cpp  chunk.hpp  dictionary_column.hpp  fitted_attribute_vector.cpp  fitted_attribute_vector.hpp  reference_column.cpp  reference_column.hpp  storage_manager.cpp  storage_manager.hpp  table.cpp  table.hpp  value_column.cpp  value_column.hpp
src/lib/utils/: load_table.cpp
src/test/: CMakeLists.txt  base_test.cpp  base_test.hpp
src/test/operators/: get_table_test.cpp  table_scan_test.cpp
src/test/storage/: chunk_test.cpp  dictionary_column_test.cpp  reference_column_test.cpp  storage_manager_test.cpp  table_test.cpp  value_column_test.cpp
